@@ -9,12 +9,12 @@ SPVM::Document::Extension - C/C++ Binding using SPVM Extension(BETA before 1.0)
 If you use the feature Runtime Compile Native Function, you can write program using C language in runtime.
 This is similar with L<Extension::C>, but L<SPVM> implement this feature by default.
   
-  # SPVM/TestCase/Extension.spvm
+  # TestCase/Extension.spvm
   package TestCase::Extension {
     native sub sum : int ($num1 : int, $num2 : int);
   }
   
-  // SPVM/TestCase/Extension.native/Extension.c
+  // TestCase/Extension.native/Extension.c
   #include <spvm_native.h>
   
   int32_t SPVM__TestCase__Extension__sum(SPVM_ENV* env, SPVM_VALUE* args) {
@@ -31,10 +31,10 @@ At first, you specify C<native> descripter at SPVM subroutine.
     native sub sum : int ($num1 : int, $num2 : int);
   }
 
-Next, you create "SPVM/TestCase/Extension/Extension.c" file
+Next, you create "TestCase/Extension/Extension.c" file
   
-  SPVM/TestCase/Extension.spvm
-  SPVM/TestCase/Extension.native/Extension.c
+  TestCase/Extension.spvm
+  TestCase/Extension.native/Extension.c
 
 Next, you write C language. You include C<spvm_native.h>.
 
