@@ -1,5 +1,6 @@
 0.0343 2018-06-05
   - do inline expasion in subroutien of same precompile package
+  - SPVM module loading path become same as Perl. You don't need to create SPVM/ directory.
 0.0342 2018-06-02
   - remove SPVM::Native
   - remove SPVM::Precompile
